@@ -22,13 +22,13 @@ this repository contains the full copyright notices and license terms. -->
     <field name="company"/>
     <notebook colspan="4">
         <page name="moves">
-            <field name="moves"  colspan="4"/>
+            <field name="moves" colspan="4" view_ids="stock.move_view_list_shipment"/>
         </page>
         <page name="outgoing_moves">
-            <field name="outgoing_moves" colspan="4"/>
+            <field name="outgoing_moves" colspan="4" view_ids="stock.move_view_list_shipment"/>
         </page>
         <page name="incoming_moves">
-            <field name="incoming_moves" colspan="4"/>
+            <field name="incoming_moves" colspan="4" view_ids="stock.move_view_list_shipment"/>
         </page>
         <page string="Other Info" id="other">
             <label name="assigned_by"/>
